k8s/production/spack/gantry-spack-io/stateful-sets.yaml
---
# It is recommended to use a StatefulSet as they restrict the number of pods.
# Applications using Litestream can only be run on a single node at a time.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gantry-spack-io
  namespace: spack
spec:
  selector:
    matchLabels:
      app: gantry-spack-io
  serviceName: gantry-spack-io

  # Litestream only supports a single node so this must always be "1".
  replicas: 1

  # Persistent volume is recommended for better durability guarantees between restarts.
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 100Mi

  template:
    metadata:
      labels:
        app: gantry-spack-io
    spec:

      # The config map is used to pass in our Litestream configuration file.
      volumes:
      - name: configmap
        configMap:
          # see terraform/modules/spack/spack_gantry.tf
          name: spack-gantry-config
          namespace: spack

      # Initialize using Litestream to restore data automatically
      # before starting the application.
      containers:
      - name: web
        image: "ghcr.io/spack/spack-gantry:latest"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: data
          mountPath: /var/lib/gantry

      - name: litestream
        image: litestream/litestream:0.3
        args: ['replicate']
        volumeMounts:
        - name: data
          mountPath: /var/lib/gantry
        - name: configmap
          mountPath: /etc/litestream.yml
          subPath: litestream.yml
