k8s/production/spack/gantry-spack-io/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spack-gantry
  namespace: spack
  labels:
    app: spack-gantry
    svc: web
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: spack-gantry
    svc: web
